--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.8.6",
-    "react-markdown": "^4.1.0",
+	 "react-markdown": "^4.1.0",
+	 "react-dropzone": "^10.1.5",
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.4",
     "you-again": "^0.8.4"
